fix: transcript implementation
