# doc/api.yml
@@ -1868,8 +1868,7 @@ components:
       properties:
         id:
           type: string
-        semester:
-          $ref: '#/components/schemas/Semester'
+#          $ref: '#/components/schemas/Semester'
         academic_year:
           type: integer
         is_definitive:
@@ -1877,6 +1876,7 @@ components:
         creation_datetime:
           type: string
           format: date-time
+
     CrupdateTranscript:
       allOf:
         - $ref: '#/components/schemas/TranscriptTemplate'
@@ -1884,13 +1884,17 @@ components:
       properties:
         student_id:
           type: string
+
     Transcript:
       allOf:
         - $ref: '#/components/schemas/TranscriptTemplate'
-      type: object
-      properties:
-        student:
-          $ref: '#/components/schemas/Student'
+        - type: object
+          properties:
+            semester:
+              $ref: '#/components/schemas/Semester'
+
+            student:
+              $ref: '#/components/schemas/Student'
     Semester:
       type: string
       enum:
